<resources>
    <string name="app_name">Course App</string>

<!--    Dialog-->
    <string name="login_error_warning">তোমার ইমেল অথবা পাসওয়ার্ড ভুল হয়েছে, আরেকটু মনে করে লেখার চেষ্টা করো</string>

<!--    Settings-->
    <string name="settings">Settings</string>
    <string name="english_us">English, US</string>
    <string name="auto_play">Auto Play</string>
    <string name="play_video_one_by_one">Play Video One by One</string>
    <string name="recommends">Recommends</string>
    <string name="new_video_alert">New Video Alert</string>
    <string name="faq">Frequently Asked Questions (FAQ)</string>
    <string name="video_tutorial">Video Tutorial</string>
    <string name="ask_a_question">Ask a Question on Forum</string>
    <string name="about_app">About App</string>
    <string name="logout">Logout</string>

<!--    About-->
    <string name="learn_programming_with_fun">Learn Programming with fun. Programming Hero Web Course App.</string>
    <string name="team_programming_hero">- Team Programming Hero</string>
    <string name="release_date">December 2020</string>
    <string name="last_update">Last Update</string>
    <string name="version_number">0.1.1 (beta)</string>
    <string name="version">Version</string>
    <string name="programming_hero">Programming Hero</string>

<!--    Login-->
    <string name="sign_in">Sign In</string>


</resources>